<resources>
    <string name="app_name">PlayRetail Api</string>
    <string name="activity_sellers">Sellers</string>
    <string name="activity_device_registration">Device Registration</string>
    <string name="activity_authentication">Seller Authentication</string>
    <string name="activity_home">Seller Home</string>
    <string name="activity_catalogue">Catalogue</string>
    <string name="activity_product">Product</string>
    <string name="activity_gallery">Gallery</string>
    <string name="activity_customer_search">Search Customer</string>
    <string name="activity_customer">Customer</string>
    <string name="activity_scanner">Scan</string>
    <string name="add_to_basket">has been added to the basket</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="genericError">Error getting api information</string>
    <string name="genericSuccess">Success</string>
    <string name="in_progress_purchase">Pending</string>
    <string name="purchase_to_pick_up">To pick up</string>
    <string name="customer_info">Customer info</string>
    <string name="playlist">Playlist</string>
    <string name="wishlist">Wishlist</string>
    <string name="offer">Offer</string>
    <string name="purchase">Historic</string>
    <string name="customer_search">Name &#8230;</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="drawer_shop">shop</string>
    <string name="write_your_message">Write your message</string>
    <string name="send_your_message">Send your message</string>
    <string name="reload">Reload</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ask_sure">Do you really want to leave the application?</string>
    <string name="basket_purchase_finish">Purchase made</string>
    <string name="message_to_manager">Message</string>
    <string name="not_sending_message">Be careful, message won\'t be sent &#8230;</string>
    <string name="pictore_crop">Crop Picture</string>
    <string name="picture_not_save">Be careful, picture won\'t be saved &#8230;</string>
    <string name="seller_home_title">Home</string>
    <string name="home_team">Team</string>
    <string name="ok">Ok</string>
    <string name="warning">Warning</string>
    <string name="no_client_context">"You are not in a Customer Context, do you want to search for a Customer?</string>
    <string name="yes_thx">Yes</string>
    <string name="no_thx">No</string>
    <string name="anonymouslike">An anonymous Like is saved for :</string>
    <string name="anonymousdislike">An anonymous DisLike is saved for :</string>
    <string name="all">All</string>
    <string name="catalogue">Catalog</string>
    <string name="customer_pts">POINTS</string>
    <string name="customer_freq">FREQ.</string>
    <string name="customer_pts_gold"> OLD PTS</string>
    <string name="home_bottom_customer_history">Customer History</string>
    <string name="home_bottom_customer_inhouse">inHouse Customer</string>
    <string name="product_summary">Summary</string>
    <string name="product_model">Models</string>
    <string name="product_associate">Associated</string>
    <string name="product_model_word">Models :</string>
    <string name="history_title">Customer history</string>
    <string name="history_no_customer">No customer advised today </string>
    <string name="no_customer_in_shop">There is no identified customer in the shop</string>
    <string name="date_jan">January</string>
    <string name="date_feb">February</string>
    <string name="date_mar">March</string>
    <string name="date_apr">April</string>
    <string name="date_may">May</string>
    <string name="date_jun">June</string>
    <string name="date_jul">July</string>
    <string name="date_aug">August</string>
    <string name="date_sep">September</string>
    <string name="date_oct">October</string>
    <string name="date_nov">November</string>
    <string name="date_dec">December</string>
    <string name="offer_1">DISCOUNT COUPONS</string>
    <string name="offer_2">GOLD GIFT SHOP</string>
    <string name="offer_3">ANNIVERSARY OFFERS</string>
    <string name="offer_4">SPECIAL OFFERS</string>
    <string name="offer_5">GIFTS OFFERS</string>
    <string name="customerprofile_address_button">ADDRESS</string>
    <string name="customerprofile_email_button">EMAIL</string>
    <string name="customerprofile_phone_button">PHONE</string>
    <string name="empty_offres_profile">No offres available</string>
    <string name="empty_playlist_profile">No playlist item available</string>
    <string-array name="customer_info_civility">
        <item>Ms.</item>
        <item>Mrs.</item>
        <item>Mr.</item>
    </string-array>
    <string-array name="customer_info_civ">
        <item>Mlle</item>
        <item>Mme</item>
        <item>M</item>
    </string-array>
    <string name="customer_information_form_civility">Civility</string>
    <string name="customer_information_form_lname">Last name</string>
    <string name="customer_information_form_fname">First name</string>
    <string name="customer_information_form_bday">Birthday</string>
    <string name="customer_information_form_ctry">Country</string>
    <string name="customer_information_form_zcode">Zipcode</string>
    <string name="customer_information_form_city">City</string>
    <string name="customer_information_form_address">Address</string>
    <string name="customer_information_form_email">"E-Mail"</string>
    <string name="customer_information_form_lnumber">Landline number</string>
    <string name="customer_information_form_mnumber">Mobile number</string>
    <string name="customer_information_form_wnumber">Work number</string>
    <string name="customer_information_back_title">Contact Details</string>
    <string name="customer_information_back">"Do you really want to cancel modification?"</string>
    <string name="cart_delete_all_items_title">"Warning"</string>
    <string name="cart_delete_all_items_desc">"Do you really want clear the cart?"</string>
    <string name="light">Light</string>
    <string name="scan_helptext">Barcode must be upright.\nAvoid glare and shadows.</string>
    <string name="scan_newcustomer_title">"Enroll"</string>
    <string name="scan_newcustomer">"Do you want to proceed to the customer's membership?" </string>
    <string name="scan_errormsg_title">"Error" </string>
    <string name="scan_errormsg">"The code you have scanned is invalid. Do you want to perform a new scan? "</string>
    <string name="retry_button_txt">Retry </string>
    <string name="errorscreen_msg">Check your connection and try again</string>
    <string name="scan_customer_errormsg">"The code you have scanned is not a valid customer. Do you want to perform a new scan? "</string>
    <string name="scan_product_errormsg">"The code you have scanned is not a valid product. Do you want to perform a new scan? "</string>
    <string name="modify_picture">Modify Photo</string>
    <string name="home_statistics">Statistiques</string>
    <string name="home_contact_manager">Contact Manager</string>
    <string name="home_tweet_list">Tweets list</string>
    <string name="home_log_out">Log out</string>
    <string name="activity_contact_manager">Contact Manager</string>
    <string name="message_sent">Message Sent</string>
    <string name="activity_statistics">Statistics</string>
    <string name="back_logout">Please press BACK again to logout</string>
    <string name="back_quit">Please press BACK again to quit the application</string>
    <string name="activity_crop">Crop</string>
    <string name="activity_basket">Basket</string>
    <string name="basket_confirm_buy">Confirm buying</string>
    <string name="loading">Loading</string>
    <string name="wait_serv_resp">Waiting for server response &#8230;</string>
    <string name="filters_show">Show filters</string>
    <string name="filters_hide">Hide filters</string>
    <string name="filter_price">Price (€)</string>
    <string name="activity_filter">Catalogue Filters</string>
    <string name="filter_display_more">Display more options</string>
    <string name="add_newcustomer_popup_text">Adhesion</string>
    <string name="add_newcustomer_popup_title">Do you want to proceed to the customer adhesion process?</string>
    <string name="barcode_notfound_popup_title">code not valid</string>
    <string name="barcode_notfound_popup_text">the scanned code is not valid</string>
    <string name="app_version_warning_popup_title">version warning</string>
    <string name="app_version_error_popup_title">version error</string>
    <string name="reload_error_msg">There was a problem connecting to the server</string>
    <string name="reload_button_text">Tap here to reload</string>
    <string name="home_no_tweet">There is no tweet yet</string>
    <string name="update_customer_success">Customer informations updeted with success</string>
    <string name="customer_information_form_id">EAN</string>
    <string name="activity_skuList">List of Sku</string>
    <string name="title_activity_config_screen">Parameter</string>
    <string name="product_price">Price</string>
    <string name="product_sku_reserve">Reserve</string>
    <string name="product_sku_buy">Add to Basket</string>
    <string name="product_sku_command">Order</string>
    <string name="product_reserved">Product reserved</string>
    <string name="product_ordered">Product ordered</string>
    <string name="current_shop">Current shop</string>
    <string name="catalogue_search">Search …</string>
    <string name="search_products">Search a product</string>
    <string name="desc_search_products">Enter product name</string>
    <string name="no_prefill" />
    <string name="customer_profile_offers_title">OFFERS</string>
    <string name="customer_profile_playlist_title">PLAYLIST</string>
    <string name="basket_alt">Basket</string>
    <string name="activity_tweets_list">Tweets list</string>
    <string name="activity_customer_history">Customer History</string>
    <string name="activity_in_shop_customer">In Shop</string>
    <string name="empty_playlist">No item in the Playlist yet</string>
    <string name="empty_wishlist">No item in the Wishlist yet</string>
    <string name="empty_sales_history">No item in the Sales History yet, make it happens</string>
    <string name="sku_add_to_cart">ADD TO CART</string>
    <string name="activity_payment">Payment</string>
    <string name="open_location_settings">Settings</string>
    <string name="bluetooth_error_title">Bluetooth Error</string>
    <string name="bluetooth_error_message">Please activate the bluetooth and pair your device with the Payment Terminal</string>
    <string name="bluetooth_open_settings">Settings</string>
    <string name="location_error_title">Location Error</string>
    <string name="location_error_message">Please activate the Location Services in your device settings</string>
    <string name="title_error">Error</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="activity_signature">Signature</string>
    <string name="activity_receip">Receip</string>
    <string name="signature_drawing_text">Confirm your payment\n by signature</string>
    <string name="offer_valid">"Validity : "</string>
    <string name="offer_until">" until : "</string>
    <string name="generic_connection_error">Something went wrong, check your online status</string>
    <string name="home_title_client">Clients</string>
    <string name="home_title_scan">Scan</string>
    <string name="home_title_tweet">Tweets</string>
    <string name="home_title_catalog">Catalog</string>
    <string name="home_catalog_historic">Historic</string>
    <string name="home_catalog_inShop">InShop</string>
    <string name="activity_form">Form</string>
    <string name="form_required_error">Field cannot be empty</string>
</resources>