<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">

        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/activity_home"
            />

        <item
            android:id="@+id/action_mod_picture"
            android:icon="@drawable/ic_photo_camera_black_24dp"
            android:title="@string/modify_picture"
            />

        <item
            android:id="@+id/action_stats"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/home_statistics"
            />

        <item
            android:id="@+id/action_contact_manager"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/home_contact_manager"
            />

        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/home_log_out"
            />

    </group>

</menu>